--- a/jankubr/events/config/locales/events.en.yml
+++ b/jankubr/events/config/locales/events.en.yml
@@ -4,8 +4,9 @@ en:
     updated: The event was updated
     deleted: The event was deleted
     new: Add a new event
-    actions: Actions
     edit: Update event
+    delete: Delete event
+    delete_confirmation: Delete this event?
   activerecord:
     attributes:
       event:
