User cannot join an event if its capacity has been reached

--- a/jankubr/events/config/locales/events.en.yml
+++ b/jankubr/events/config/locales/events.en.yml
@@ -16,6 +16,7 @@ en:
     could_not_leave: Could not leave the event
     when: When
     attendees: Attendees
+    capacity_reached: Capacity reached
   activerecord:
     attributes:
       event:
