Event can be joined only if starts later than 1 day from now

--- a/jankubr/events/config/locales/events.en.yml
+++ b/jankubr/events/config/locales/events.en.yml
@@ -17,6 +17,7 @@ en:
     when: When
     attendees: Attendees
     capacity_reached: Capacity reached
+    too_late_to_join: Too late to join
   activerecord:
     attributes:
       event:
