--- a/README.textile
+++ b/README.textile
@@ -1,18 +1,26 @@
-h1. Ruby sentiments
+h1. Ruby Sentiments
 
-During our endless development discussions, we always wonder how THIS guy would solve SOMETHING we are currently working on. Although programming is an exact discipline, code solving a THING differs person to person. And it would be really nice to be able to compare different approaches to everyday problems. Here you go:
+This series of presentations is here to show, how much will differ solution of a simple task programmed by diverse developers. The real fun comes, when the original task has to be extended or even changed a lot :).
 
 h2. Rules
-# Some (means 3-5) rubyists concurrently work on 1 specification from the area of web development. They don't spend on this more than 1 evening (equal to about 2-4 hours max).
-# Rubyists push their work to this repo and comment their work (shortly, but well) in the Readme.
-# At a regular Ruby meeting, rubyists present their code in person in front of other devs. Important thing that should be heard from them is WHY such a code was written, not just HOW it works.
+# Rubyist (yes, this is Ruby only) concurrently work on 1 specification from the area of web development. 
+# They push their solution from current round to this repo.
+# At the next Ruby meeting, they present their code for other devs. WHY such a code was written is very important, not just HOW it works.
 
-Of course this shouldn't be a one off event. While every solution is interesting to see, the real fun comes, when the original task has to be extended or even changed a lot. That way we could compare the amount (and complexity) of changes needed to satisfy this new specification.
+h3. Round 1:
+* User can see list of events (name, description, date, from time, to time).
+* User can sign to attend any of those events. 
+* User can visit this page later and still see his attendance.
 
-h3. Specification 1:
-# User can see list of events (name, description, date, from time, to time).
-# User can sign to attend any of those events. 
-# User can visit this page later and still see his attendance.
+h3. Round 2
+* User can sign off an event.
+* Events can have limited space. It this limit gets reached, users cant sign to such limited event.
+* Admin (a special kind of user) can see emails of all users signed to a particular event.
+
+h3. Round 3
+# Two types of events: one-off (with a fixed date) and regular (day in week).
+# Users can sign at least one day before the event.
+
 
 In this repo, you can see results of that. One directory per developer, Readme's explaining developers decisions. 
 ( Czech: http://rails-forum.cz/t/ruby-sentiments/377 )
