--- a/README.textile
+++ b/README.textile
@@ -7,8 +7,8 @@ As this can be really inspiring, we believe that the real fun comes, when the or
 h2. Rules
 
 # *Ruby* programmers (yes, this is Ruby only) individually work on a given specification (see below). 
-# They push their *solution* of current round to this repo.
-# At the next *Ruby meeting*, they present their code to other devs. *WHY* such a code was written is very important, not just HOW it works.
+# They push their *solution* to this repo.
+# At the next *Ruby meeting*, they present their code to other devs. *WHY* such a code was written is very important, not just -HOW- it works.
 
 h2. Specification
 
