Not only ruby for us

--- a/README.textile
+++ b/README.textile
@@ -6,9 +6,9 @@ As this can be really inspiring, we believe that the real fun comes, when the or
 
 h2. Rules
 
-# *Ruby* programmers (yes, this is Ruby only) individually work on a given specification (see below). 
+# Programmers (no, this is not Ruby-only) individually work on a given specification (see below). 
 # They push their *solution* to this repo.
-# At the next *Ruby meeting*, they present their code to other devs. *WHY* such a code was written is very important, not just -HOW- it works.
+# At the next *meeting*, they present their code to other devs. *WHY* such a code was written is very important, not just -HOW- it works.
 
 h2. Specification
 
